src/test/ui/resolve/issue-70736-async-fn-no-body-def-collector.stderr
error: free function without a body
  --> $DIR/issue-70736-async-fn-no-body-def-collector.rs:3:1
   |
LL | async fn free();
   | ^^^^^^^^^^^^^^^-
   |                |
   |                help: provide a definition for the function: `{ <body> }`

error: associated function in `impl` without body
  --> $DIR/issue-70736-async-fn-no-body-def-collector.rs:7:5
   |
LL |     async fn inherent();
   |     ^^^^^^^^^^^^^^^^^^^-
   |                        |
   |                        help: provide a definition for the function: `{ <body> }`

error[E0706]: functions in traits cannot be declared `async`
  --> $DIR/issue-70736-async-fn-no-body-def-collector.rs:11:5
   |
LL |     async fn associated();
   |     -----^^^^^^^^^^^^^^^^^
   |     |
   |     `async` because of this
   |
   = note: `async` trait functions are not currently supported
   = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait

error: associated function in `impl` without body
  --> $DIR/issue-70736-async-fn-no-body-def-collector.rs:15:5
   |
LL |     async fn associated();
   |     ^^^^^^^^^^^^^^^^^^^^^-
   |                          |
   |                          help: provide a definition for the function: `{ <body> }`

error[E0706]: functions in traits cannot be declared `async`
  --> $DIR/issue-70736-async-fn-no-body-def-collector.rs:15:5
   |
LL |     async fn associated();
   |     -----^^^^^^^^^^^^^^^^^
   |     |
   |     `async` because of this
   |
   = note: `async` trait functions are not currently supported
   = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait

error[E0276]: impl has stricter requirements than trait
  --> $DIR/issue-70736-async-fn-no-body-def-collector.rs:15:5
   |
LL |     async fn associated();
   |     ---------------------- definition of `associated` from trait
...
LL |     async fn associated();
   |     ^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `(): Future`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0276, E0706.
For more information about an error, try `rustc --explain E0276`.
